Bug 498930 - Qrca is missing support to open an image file to scan QR codes
Summary: Qrca is missing support to open an image file to scan QR codes
Status: RESOLVED FIXED
Alias: None
Product: Qrca
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Jonah Brüchert
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-20 18:31 UTC by Neal Gompa
Modified: 2025-02-01 16:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Neal Gompa 2025-01-20 18:31:27 UTC
SUMMARY
Qrca can scan QR codes from a camera, but it's possible for people to take a picture from a phone and send the image to your computer to scan it (particularly for DRM Panic error messages).

STEPS TO REPRODUCE
1. Open Qrca

OBSERVED RESULT
See lack of ability to open image files.

EXPECTED RESULT
Option to open an image file to scan QR codes is present in the UI.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 41 (KDE Plasma)
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION
Fedora Linux 42 will have DRM Panic set up so that kernel crash errors are presented in the form of QR codes.

https://fedoraproject.org/wiki/Changes/EnableDrmPanic
Comment 1 Nicolas Fella 2025-02-01 16:11:16 UTC
Git commit 12a27dc6c008acc32fce7746fa95e8a0a815f11a by Nicolas Fella, on behalf of Onuralp SEZER.
Committed on 01/02/2025 at 16:11.
Pushed by nicolasfella into branch 'master'.

Add image scanning functionality to QR code scanner

M  +13   -0    src/Qrca.cpp
M  +1    -0    src/Qrca.h
M  +57   -1    src/qml/QrCodeScannerPage.qml

https://invent.kde.org/utilities/qrca/-/commit/12a27dc6c008acc32fce7746fa95e8a0a815f11a