Add image scanning functionality to QR code scanner

BUG: 498930